--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.6.3",
     "@astrojs/check": "^0.5.10",
+    "@astrojs/vercel": "^7.5.3",
+    "astro": "^4.6.3",
     "typescript": "^5.4.5"
   }
 }
