--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@astrojs/check": "^0.5.10",
     "@astrojs/vercel": "^7.5.3",
-    "astro": "^4.6.3",
+    "astro": "^4.6.4"
+  },
+  "devDependencies": {
     "typescript": "^5.4.5"
   }
 }
