--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.5.10",
+    "@astrojs/tailwind": "^5.1.0",
     "@astrojs/vercel": "^7.5.3",
     "astro": "^4.6.4"
   },
   "devDependencies": {
+    "tailwindcss": "^3.4.3",
     "typescript": "^5.4.5"
   }
 }
