--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@astrojs/check": "^0.5.10",
     "@astrojs/tailwind": "^5.1.0",
     "@astrojs/vercel": "^7.5.3",
-    "astro": "^4.6.4"
+    "astro": "^4.6.4",
+    "astro-icon": "^1.1.0"
   },
   "devDependencies": {
     "tailwindcss": "^3.4.3",
